--- a/Archive/Base.lproj/Main.storyboard
+++ b/Archive/Base.lproj/Main.storyboard
@@ -19,11 +19,11 @@
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="64" width="600" height="536"/>
+                        <rect key="frame" x="0.0" y="44" width="600" height="556"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="HP1-YQ-rdj">
-                                <rect key="frame" x="0.0" y="486" width="600" height="50"/>
+                                <rect key="frame" x="0.0" y="506" width="600" height="50"/>
                                 <subviews>
                                     <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" minValue="0.0" maxValue="1" translatesAutoresizingMaskIntoConstraints="NO" id="NqS-pk-uYq">
                                         <rect key="frame" x="-2" y="10" width="604" height="31"/>
@@ -419,7 +419,7 @@
                         </collectionViewFlowLayout>
                         <cells>
                             <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="ReaderCell" id="sly-u2-8H0" customClass="IAReaderCollectionCellView" customModule="Archive" customModuleProvider="target">
-                                <rect key="frame" x="0.0" y="64" width="103" height="135"/>
+                                <rect key="frame" x="0.0" y="44" width="103" height="135"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
                                     <rect key="frame" x="0.0" y="0.0" width="103" height="135"/>
@@ -836,16 +836,16 @@
                         </collectionViewFlowLayout>
                         <cells>
                             <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="itemCollectionCell" id="nKy-tb-s5e" customClass="IACollectionsExploreViewCell" customModule="Archive" customModuleProvider="target">
-                                <rect key="frame" x="0.0" y="64" width="150" height="300"/>
+                                <rect key="frame" x="0.0" y="0.0" width="150" height="300"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
                                     <rect key="frame" x="0.0" y="0.0" width="150" height="300"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="htG-CN-Jj9">
-                                            <rect key="frame" x="-25" y="8" width="200" height="200"/>
+                                            <rect key="frame" x="-25" y="58" width="200" height="150"/>
                                             <constraints>
-                                                <constraint firstAttribute="height" constant="200" id="2CI-ov-wlZ">
+                                                <constraint firstAttribute="height" constant="150" id="2CI-ov-wlZ">
                                                     <variation key="widthClass=compact" constant="100"/>
                                                 </constraint>
                                                 <constraint firstAttribute="width" secondItem="htG-CN-Jj9" secondAttribute="height" multiplier="1:1" id="RNI-fE-381"/>
@@ -890,7 +890,7 @@
                                     <constraint firstItem="htG-CN-Jj9" firstAttribute="leading" secondItem="nKy-tb-s5e" secondAttribute="leading" constant="5" id="ao1-tj-uA5">
                                         <variation key="heightClass=regular-widthClass=regular" constant="20"/>
                                     </constraint>
-                                    <constraint firstItem="htG-CN-Jj9" firstAttribute="top" secondItem="nKy-tb-s5e" secondAttribute="topMargin" id="c2Z-hn-44l"/>
+                                    <constraint firstItem="htG-CN-Jj9" firstAttribute="top" secondItem="nKy-tb-s5e" secondAttribute="topMargin" constant="50" id="c2Z-hn-44l"/>
                                     <constraint firstItem="htG-CN-Jj9" firstAttribute="leading" secondItem="nKy-tb-s5e" secondAttribute="leadingMargin" id="sco-Pd-YaM"/>
                                 </constraints>
                                 <size key="customSize" width="150" height="300"/>
@@ -914,7 +914,7 @@
                                 </connections>
                             </collectionViewCell>
                             <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="BookSearchCell" id="YhU-r8-D5Z" customClass="IAItemListCellView" customModule="Archive" customModuleProvider="target">
-                                <rect key="frame" x="225" y="64" width="150" height="300"/>
+                                <rect key="frame" x="225" y="0.0" width="150" height="300"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
                                     <rect key="frame" x="0.0" y="0.0" width="150" height="300"/>
@@ -933,6 +933,24 @@
                                                 </mask>
                                             </variation>
                                         </imageView>
+                                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="R1Z-Zv-dxh" userLabel="Top bgr View">
+                                            <rect key="frame" x="0.0" y="0.0" width="150" height="35"/>
+                                            <subviews>
+                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="zLc-1j-bXA" userLabel="favo btn">
+                                                    <rect key="frame" x="115" y="5" width="30" height="27"/>
+                                                    <state key="normal" image="favourite_empty"/>
+                                                    <connections>
+                                                        <action selector="favouriteBtnPressed:" destination="YhU-r8-D5Z" eventType="touchUpInside" id="uTU-fX-KPO"/>
+                                                    </connections>
+                                                </button>
+                                            </subviews>
+                                            <color key="backgroundColor" white="1" alpha="0.64606207770000001" colorSpace="calibratedWhite"/>
+                                            <constraints>
+                                                <constraint firstItem="zLc-1j-bXA" firstAttribute="top" secondItem="R1Z-Zv-dxh" secondAttribute="top" constant="5" id="UI5-qw-T8v"/>
+                                                <constraint firstAttribute="trailing" secondItem="zLc-1j-bXA" secondAttribute="trailing" constant="5" id="Y4U-AN-2DJ"/>
+                                                <constraint firstAttribute="height" constant="35" id="yLQ-eI-g0g"/>
+                                            </constraints>
+                                        </view>
                                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="v9k-2S-SYq">
                                             <rect key="frame" x="0.0" y="250" width="150" height="50"/>
                                             <subviews>
@@ -962,7 +980,10 @@
                                 <constraints>
                                     <constraint firstAttribute="bottom" secondItem="v9k-2S-SYq" secondAttribute="bottom" id="2Km-KU-d7g"/>
                                     <constraint firstAttribute="bottom" secondItem="VLT-6b-T3h" secondAttribute="bottom" id="8HC-vy-MdW"/>
+                                    <constraint firstItem="R1Z-Zv-dxh" firstAttribute="leading" secondItem="YhU-r8-D5Z" secondAttribute="leading" id="Fug-eh-IUm"/>
                                     <constraint firstItem="VLT-6b-T3h" firstAttribute="leading" secondItem="YhU-r8-D5Z" secondAttribute="leadingMargin" constant="-8" id="KTU-eI-Gq7"/>
+                                    <constraint firstItem="R1Z-Zv-dxh" firstAttribute="top" secondItem="YhU-r8-D5Z" secondAttribute="top" id="YhP-RK-UNy"/>
+                                    <constraint firstItem="R1Z-Zv-dxh" firstAttribute="width" secondItem="YhU-r8-D5Z" secondAttribute="width" id="bbR-Jh-Yhd"/>
                                     <constraint firstAttribute="trailingMargin" secondItem="VLT-6b-T3h" secondAttribute="trailing" constant="-8" id="fre-dH-0Tq"/>
                                     <constraint firstItem="VLT-6b-T3h" firstAttribute="top" secondItem="YhU-r8-D5Z" secondAttribute="top" id="v0M-Xo-czT"/>
                                     <constraint firstItem="v9k-2S-SYq" firstAttribute="leading" secondItem="YhU-r8-D5Z" secondAttribute="leading" id="xPj-LQ-X4u"/>
@@ -972,6 +993,7 @@
                                 <connections>
                                     <outlet property="bookImageView" destination="VLT-6b-T3h" id="KDN-Qt-o7A"/>
                                     <outlet property="bookTitleLabel" destination="y0X-nm-JM7" id="893-Mr-xDE"/>
+                                    <outlet property="favouriteBtn" destination="zLc-1j-bXA" id="ZcE-cG-aEN"/>
                                     <segue destination="9hh-xu-Q8S" kind="presentation" identifier="showReader" id="g80-tq-n91"/>
                                 </connections>
                             </collectionViewCell>
@@ -1002,7 +1024,7 @@
                 </collectionViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="xnf-Vc-Yma" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1083" y="2988"/>
+            <point key="canvasLocation" x="1083" y="2891"/>
         </scene>
         <!--Sort ListVC-->
         <scene sceneID="RCI-tv-3f2">
@@ -1120,34 +1142,18 @@
             </objects>
             <point key="canvasLocation" x="1603" y="2582"/>
         </scene>
-        <!--View Controller-->
-        <scene sceneID="m0I-Gl-NWc">
-            <objects>
-                <viewController id="gtc-ey-vOw" sceneMemberID="viewController">
-                    <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="bcJ-gK-LG0"/>
-                        <viewControllerLayoutGuide type="bottom" id="hFx-GK-6YU"/>
-                    </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="6f9-yZ-20b">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                    </view>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="4Hh-NF-kEW" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-        </scene>
     </scenes>
     <resources>
         <image name="Internet-Archive-Logo" width="153" height="153"/>
         <image name="Login Button" width="100" height="55"/>
         <image name="down_sort" width="32" height="32"/>
         <image name="favorite" width="32" height="30"/>
+        <image name="favourite_empty" width="30" height="27"/>
         <image name="ia-button-plain" width="30" height="30"/>
         <image name="search-button" width="30" height="30"/>
         <image name="sort" width="32" height="32"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="S2s-Yx-eJD"/>
+        <segue reference="nMy-rZ-wJ2"/>
     </inferredMetricsTieBreakers>
 </document>
